# cogitarelink-fabric

./: .gitignore  CLAUDE.md  README.md  codemeta.json  docker-compose.yml  pyproject.toml
.claude/memory/: MEMORY.md
.claude/rules/: decisions-index.md  docker-patterns.md  python-patterns.md  rdf-patterns.md  sparql-patterns.md  typescript-patterns.md
.claude/skills/: decision-lookup.md  fabric-discover.md  fabric-node-init.md  fabric-prov.md  fabric-sparql.md  fabric-status.md  fabric-test.md  fabric-validate.md  hitl-simulate.md  nanopub-draft.md  sbom-update.md  shacl-generate.md  vc-issue.md
agents/: __init__.py  fabric_agent.py  fabric_discovery.py  fabric_query.py  fabric_rdfs_routes.py  fabric_validate.py  fabric_write.py
credentials/: claude-code-agent-vc.json
docs/: architecture.md  experimental-results.md  fair-and-agents.md  governance-model.md  identifier-persistence.md  research-integrity.md
docs/plans/: 2026-02-22-rlm-fabric-integration-design.md  2026-02-22-rlm-fabric-integration-plan.md  2026-02-23-analyze-rdfs-routes-tool.md  2026-02-23-l2-tbox-loading-design.md  2026-02-23-l2-tbox-loading-plan.md  2026-02-23-phase1.5-navigation-design.md  2026-02-23-phase1.5-navigation-plan.md  2026-02-23-sio-tbox-experiments.md  2026-02-23-tbox-lift-experiments-design.md  2026-02-23-tbox-lift-experiments-plan.md  (+19 more)
ontology/: fabric-core-profile.ttl  fabric-vocab.ttl  fabric.ttl  sio.ttl  sosa-tbox-stub.ttl
provenance/: claude-code-sbom.jsonld
scripts/: bootstrap_data.py
shapes/: endpoint-sosa.ttl
sparql/: sosa-examples.ttl
tests/: Makefile
(+375 files in other folders)
